// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Select component renders with a label 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Select
    hideLabel={false}
    label="select label"
    name="select name"
    options={
      Array [
        "1",
        "2",
        "3",
      ]
    }
    wrapperClass=""
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <label
          className="block mb-tiny truncate"
          htmlFor="select name"
        >
          select label
        </label>,
        <select
          className="m0 select"
          id="select name"
        >
          <option>
            1
          </option>
          <option>
            2
          </option>
          <option>
            3
          </option>
        </select>,
      ],
      "className": "mb2",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": "select label",
          "className": "block mb-tiny truncate",
          "htmlFor": "select name",
        },
        "ref": null,
        "rendered": "select label",
        "type": "label",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <option>
              1
            </option>,
            <option>
              2
            </option>,
            <option>
              3
            </option>,
          ],
          "className": "m0 select",
          "id": "select name",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": "1",
            "nodeType": "host",
            "props": Object {
              "children": "1",
            },
            "ref": null,
            "rendered": "1",
            "type": "option",
          },
          Object {
            "instance": null,
            "key": "2",
            "nodeType": "host",
            "props": Object {
              "children": "2",
            },
            "ref": null,
            "rendered": "2",
            "type": "option",
          },
          Object {
            "instance": null,
            "key": "3",
            "nodeType": "host",
            "props": Object {
              "children": "3",
            },
            "ref": null,
            "rendered": "3",
            "type": "option",
          },
        ],
        "type": "select",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <label
            className="block mb-tiny truncate"
            htmlFor="select name"
          >
            select label
          </label>,
          <select
            className="m0 select"
            id="select name"
          >
            <option>
              1
            </option>
            <option>
              2
            </option>
            <option>
              3
            </option>
          </select>,
        ],
        "className": "mb2",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "select label",
            "className": "block mb-tiny truncate",
            "htmlFor": "select name",
          },
          "ref": null,
          "rendered": "select label",
          "type": "label",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <option>
                1
              </option>,
              <option>
                2
              </option>,
              <option>
                3
              </option>,
            ],
            "className": "m0 select",
            "id": "select name",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": "1",
              "nodeType": "host",
              "props": Object {
                "children": "1",
              },
              "ref": null,
              "rendered": "1",
              "type": "option",
            },
            Object {
              "instance": null,
              "key": "2",
              "nodeType": "host",
              "props": Object {
                "children": "2",
              },
              "ref": null,
              "rendered": "2",
              "type": "option",
            },
            Object {
              "instance": null,
              "key": "3",
              "nodeType": "host",
              "props": Object {
                "children": "3",
              },
              "ref": null,
              "rendered": "3",
              "type": "option",
            },
          ],
          "type": "select",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`Select component renders without a label 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Select
    hideLabel={true}
    label="select label"
    name="select name"
    options={
      Array [
        "1",
        "2",
        "3",
      ]
    }
    wrapperClass=""
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <label
          className="sr-only"
          htmlFor="select name"
        >
          select label
        </label>,
        <select
          className="m0 select"
          id="select name"
        >
          <option>
            1
          </option>
          <option>
            2
          </option>
          <option>
            3
          </option>
        </select>,
      ],
      "className": "mb2",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": "select label",
          "className": "sr-only",
          "htmlFor": "select name",
        },
        "ref": null,
        "rendered": "select label",
        "type": "label",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <option>
              1
            </option>,
            <option>
              2
            </option>,
            <option>
              3
            </option>,
          ],
          "className": "m0 select",
          "id": "select name",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": "1",
            "nodeType": "host",
            "props": Object {
              "children": "1",
            },
            "ref": null,
            "rendered": "1",
            "type": "option",
          },
          Object {
            "instance": null,
            "key": "2",
            "nodeType": "host",
            "props": Object {
              "children": "2",
            },
            "ref": null,
            "rendered": "2",
            "type": "option",
          },
          Object {
            "instance": null,
            "key": "3",
            "nodeType": "host",
            "props": Object {
              "children": "3",
            },
            "ref": null,
            "rendered": "3",
            "type": "option",
          },
        ],
        "type": "select",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <label
            className="sr-only"
            htmlFor="select name"
          >
            select label
          </label>,
          <select
            className="m0 select"
            id="select name"
          >
            <option>
              1
            </option>
            <option>
              2
            </option>
            <option>
              3
            </option>
          </select>,
        ],
        "className": "mb2",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "select label",
            "className": "sr-only",
            "htmlFor": "select name",
          },
          "ref": null,
          "rendered": "select label",
          "type": "label",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <option>
                1
              </option>,
              <option>
                2
              </option>,
              <option>
                3
              </option>,
            ],
            "className": "m0 select",
            "id": "select name",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": "1",
              "nodeType": "host",
              "props": Object {
                "children": "1",
              },
              "ref": null,
              "rendered": "1",
              "type": "option",
            },
            Object {
              "instance": null,
              "key": "2",
              "nodeType": "host",
              "props": Object {
                "children": "2",
              },
              "ref": null,
              "rendered": "2",
              "type": "option",
            },
            Object {
              "instance": null,
              "key": "3",
              "nodeType": "host",
              "props": Object {
                "children": "3",
              },
              "ref": null,
              "rendered": "3",
              "type": "option",
            },
          ],
          "type": "select",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
